# nio-alica-supplementary

alica_capnzero_proxy/: Makefile  alica_capnzero_proxy.lua  alica_capnzero_proxy.make  cmake_install.cmake  premake5.lua
alica_capnzero_proxy/include/alica_capnz_msg/: AlicaEngineInfo.capnp  AllocationAuthorityInfo.capnp  CMakeLists.txt  PlanTreeInfo.capnp  RoleSwitch.capnp  SolverResult.capnp  SyncReady.capnp  SyncTalk.capnp
alica_capnzero_proxy/include/communication/: AlicaCapnzeroCommunication.h
alica_capnzero_proxy/src/: Communication.cpp
alica_capnzero_proxy/src/communication/: AlicaCapnzeroCommunication.cpp
